@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: incr.test,v 1.4 2003/02/04 01:53:15 mdejong Exp $
+# RCS: @(#) $Id: incr.test,v 1.5 2003/02/07 00:04:23 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -181,8 +181,7 @@ test incr-1.19 {TclCompileIncrCmd: increment given, but erroneous} {
 } {wrong # args: should be "set varName ?newValue?"
     while executing
 "set"
-    (increment expression)
-    while executing
+    invoked from within
 "incr i [set]"}
 test incr-1.20 {TclCompileIncrCmd: increment given, in quotes} {
     set i 25
@@ -224,7 +223,7 @@ test incr-1.27 {TclCompileIncrCmd: runtime error, bad variable name} {
 } {1 {wrong # args: should be "set varName ?newValue?"} {wrong # args: should be "set varName ?newValue?"
     while executing
 "set"
-    while executing
+    invoked from within
 "incr [set]"}}
 test incr-1.28 {TclCompileIncrCmd: runtime error, readonly variable} {
     proc readonly args {error "variable is read-only"}
@@ -435,7 +434,7 @@ test incr-2.19 {incr command (not compiled): increment given, but erroneous} {
 } {wrong # args: should be "set varName ?newValue?"
     while executing
 "set"
-    while executing
+    invoked from within
 "$z i [set]"}
 test incr-2.20 {incr command (not compiled): increment given, in quotes} {
     set z incr
@@ -485,7 +484,7 @@ test incr-2.27 {incr command (not compiled): runtime error, bad variable name} {
 } {1 {wrong # args: should be "set varName ?newValue?"} {wrong # args: should be "set varName ?newValue?"
     while executing
 "set"
-    while executing
+    invoked from within
 "$z [set]"}}
 test incr-2.28 {incr command (not compiled): runtime error, readonly variable} {
     set z incr
@@ -502,6 +501,20 @@ test incr-2.29 {incr command (not compiled): runtime error, bad variable value} 
     set x "  -  "
     list [catch {$z x 1} msg] $msg
 } {1 {expected integer but got "  -  "}}
+test incr-2.30 {incr command (not compiled): bad increment} {
+    set z incr
+    set x 0
+    list [catch {$z x 1a} msg] $msg $errorInfo
+} {1 {expected integer but got "1a"} {expected integer but got "1a"
+    (reading increment)
+    invoked from within
+"$z x 1a"}}
+test incr-2.31 {incr command (compiled): bad increment} {
+    list [catch {incr x 1a} msg] $msg $errorInfo
+} {1 {expected integer but got "1a"} {expected integer but got "1a"
+    (reading increment)
+    invoked from within
+"incr x 1a"}}
 
 # cleanup
 ::tcltest::cleanupTests
